# cc-statusline

./: CLAUDE.md  Cargo.toml  Makefile  README.md  install.sh  setup.ps1  setup.sh  statusline.sh
.github/workflows/: release.yml
src/: main.rs  providers.rs
