[package]
name = "cc-statusline"
version = "0.3.5"
edition = "2021"
description = "A Rust-based statusline plugin for Claude Code"
authors = ["zzfn"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "native-tls"] }
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.0", features = ["rt", "time"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
